--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,9 @@ ipympl>=0.8.2
 ipycanvas>=0.9.1
 # Python: ipyleaflet library for Jupyter notebooks (optional)
 ipyleaflet
+# Python: easydict
+easydict
+
 
 # Python: plotting libraries (optional)
 plotly>=5,<6
